[tool.poetry]
name = "org_recon"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.20"
awscli = "^1.22.20"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
